--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EXPLORIOT - System Info</title> <link rel="stylesheet" href="style.css">
+    <title>System Info</title> <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h1 class="glitch" data-text="EXPLORIOT">EXPLORIOT</h1>
+        <h1 class="glitch" data-text="Neko_Love">Neko_Love</h1>
         <h2 class="subtitle">// SYSTEM INFO //</h2>
 
         <div id="data-display">
